--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,5 +1,6 @@
 .footer {
   padding: 60px 0;
+  margin: 0;
   display: flex;
   justify-content: center;
 }
@@ -7,4 +8,5 @@
 .footer__content {
   font-style: normal;
   font-weight: 400;
+  margin: 0;
 }
