--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -8,12 +8,11 @@
 .profile__new-post-button {
   display: flex;
   margin-left: auto;
+  margin-top: auto;
   border-radius: 8px;
   background-color: #212121;
   gap: 8px;
   border: none;
-  padding: 18px auto;
-  margin-top: 138px;
   color: #fcf5e5;
   font-size: 16px;
   line-height: 16px;
@@ -39,13 +38,12 @@
 .profile__name {
   margin: 0 0 12px;
   font-size: 32px;
-  line-height: 1;
+  line-height: 1.22;
   text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
-  padding-bottom: 5px;
   max-width: 420px;
 }
 
@@ -55,7 +53,7 @@
   padding: 0;
   opacity: 70%;
   font-size: 16px;
-  line-height: 1;
+  line-height: 1.22;
   text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
@@ -69,7 +67,7 @@
   margin-top: auto;
   background-color: rgba(255, 255, 255, 0);
   border: none;
-  padding: 0;
+  padding: 18px 0 0;
   display: flex;
   gap: 8px;
   opacity: 70%;
@@ -90,6 +88,7 @@
     align-items: center;
     text-align: center;
     padding-top: 20px;
+    justify-content: center;
   }
 
   .profile__avatar {
@@ -105,6 +104,7 @@
 
   .profile__column {
     margin: 0 0 20px;
+    justify-content: center;
   }
 
   .profile__name {
@@ -114,7 +114,7 @@
   }
 
   .profile__title {
-    margin-bottom: 32px;
+    margin: 0 0 32px;
     max-width: 288px;
   }
 
