--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,23 +1,5 @@
-.card-gallery {
-  padding: 20px 0 0;
-  border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
-}
-
-.card-gallery__list {
-  list-style: none;
-  margin: 0;
-  padding: 0 0 40px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, 413px);
-  justify-content: center;
-  gap: 40px 20px;
-}
-
 .card {
   max-width: 413px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
 }
 
 .card__title {
@@ -39,10 +21,6 @@
   display: block;
 }
 
-.gallery__card {
-  display: flex;
-  flex-direction: column;
-}
 .card__like-button {
   background-image: url(../images/icons/like-icon.svg);
   width: 23px;
@@ -53,6 +31,17 @@
   align-content: center;
 }
 
+.card__like-button:hover {
+  background-image: url(../images/icons/like-hover.svg);
+  width: 23px;
+  height: 20px;
+  border: none;
+  background-color: transparent;
+  opacity: 100%;
+  align-content: center;
+  cursor: pointer;
+}
+
 .card__content {
   display: flex;
   justify-content: space-between;
@@ -60,11 +49,6 @@
 }
 
 @media screen and (max-width: 425px) {
-  .card-gallery__list {
-    grid-template-columns: repeat(auto-fit, 288px);
-    padding: 0 0 20px;
-  }
-
   .card__image {
     width: 100%;
     height: 288px;
@@ -73,7 +57,7 @@
   .card__title {
     font-size: 16px;
     line-height: 1.2;
-    max-width: 353px;
+    max-width: 250px;
   }
 
   .card__like-button {
