--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -22,7 +22,26 @@
   justify-content: center;
 }
 
-.plus {
+.profile__new-post-button:hover {
+  display: flex;
+  margin-left: auto;
+  margin-top: auto;
+  border-radius: 8px;
+  background-color: #212121;
+  cursor: pointer;
+  opacity: 80%;
+  gap: 8px;
+  border: none;
+  color: #fcf5e5;
+  font-size: 16px;
+  line-height: 16px;
+  min-width: 149px;
+  height: 52px;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile__plus-icon {
   width: 12px;
   height: 12px;
   padding: 0;
@@ -38,7 +57,8 @@
 .profile__name {
   margin: 0 0 12px;
   font-size: 32px;
-  line-height: 1.22;
+  line-height: 1;
+  font-weight: 500;
   text-overflow: ellipsis;
   overflow: hidden;
   display: -webkit-box;
@@ -75,10 +95,24 @@
   line-height: 1;
 }
 
+.profile__edit-button:hover {
+  margin-top: auto;
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  padding: 18px 0 0;
+  display: flex;
+  gap: 8px;
+  opacity: 100%;
+  font-size: 16px;
+  line-height: 1;
+  cursor: pointer;
+}
+
 .profile__avatar {
   border-radius: 8px;
   height: 190px;
   width: 190px;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 627px) {
