--- a/blocks/card-gallery.css
+++ b/blocks/card-gallery.css
@@ -21,6 +21,6 @@
 @media screen and (max-width: 425px) {
   .card-gallery__list {
     grid-template-columns: repeat(auto-fit, 288px);
-    padding: 0 0 20px;
+    gap: 20px 20px;
   }
 }
