--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -99,7 +99,7 @@
   margin-top: auto;
   background-color: rgba(255, 255, 255, 0);
   border: none;
-  padding: 18px 0 0;
+  padding: 0 0 0;
   display: flex;
   gap: 8px;
   opacity: 100%;
