--- a/blocks/card-gallery.css
+++ b/blocks/card-gallery.css
@@ -17,5 +17,6 @@
   .card-gallery__list {
     grid-template-columns: repeat(auto-fit, 288px);
     gap: 20px 20px;
+    padding-bottom: 20px;
   }
 }
