--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -41,6 +41,7 @@
   width: 40px;
   height: 40px;
   background-image: url(../images/icons/close-button.svg);
+  background-size: cover;
   border: none;
   background-color: #ffffff;
   opacity: 40%;
@@ -112,6 +113,8 @@
   .modal__close-button {
     padding: 0;
     margin: 0;
+    top: 12px;
+    right: 12px;
     background-image: url(../images/icons/close-button.svg);
   }
 
