--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -10,11 +10,15 @@
   align-items: center;
   justify-content: center;
   visibility: hidden;
+
   margin: 0;
+  opacity: 0;
+  transition: opacity 0.3s ease-in;
 }
 
-.modal_opened {
+.modal__opened {
   visibility: visible;
+  opacity: 1;
 }
 .modal__container {
   padding: 32px 50px;
@@ -24,6 +28,15 @@
   border-radius: 8px;
   position: absolute;
   top: 207px;
+}
+
+.modal__container_type_preview {
+  padding: 0;
+  margin: 0;
+  top: 81px;
+  background-color: transparent;
+  width: unset;
+  display: unset;
 }
 
 .modal__title {
@@ -53,6 +66,13 @@
   cursor: pointer;
 }
 
+.modal__close-button_type_preview {
+  background-image: url(../images/icons/preview-close.svg);
+  top: 0;
+  right: -52.5px;
+  opacity: 100;
+  background-color: transparent;
+}
 .modal__form {
   display: flex;
   flex-direction: column;
@@ -98,9 +118,30 @@
   background-color: rgba(33, 33, 33, 0.8);
 }
 
+.modal__image {
+  max-width: 80vw;
+  max-height: 80vh;
+  object-fit: contain;
+  background-color: transparent;
+}
+
+.modal__caption {
+  margin: 8px 0 0;
+  font-family: Poppins, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  color: rgba(255, 255, 255, 1);
+  background-color: rgba(33, 33, 33, 1);
+  line-height: 24px;
+  padding: 4px 8px;
+  border-radius: 8px;
+  position: absolute;
+}
+
 @media screen and (max-width: 625px) {
   .modal {
     padding: 0 10 0px;
+    background-color: rgba(33, 33, 33, 0.8);
   }
 
   .modal__container {
@@ -110,12 +151,31 @@
     top: 134px;
   }
 
+  .modal__container_type_preview {
+   max-width: 100%;
+    
+  }
+
   .modal__close-button {
     padding: 0;
     margin: 0;
     top: 12px;
     right: 12px;
     background-image: url(../images/icons/close-button.svg);
+  }
+
+  .modal__close-button_type_preview {
+    background-image: url(../images/icons/preview-close.svg);
+    position: absolute;
+    top: -35px;
+    right: 0;
+    
+  }
+
+  .modal__image {
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%;
   }
 
   .modal__title {
@@ -140,4 +200,13 @@
     max-width: 272px;
     padding: 16 12;
   }
+
+  .modal__caption {
+    margin: 8px 0 0;
+    font-size: 16px;
+    background-color: rgba(33, 33, 33, 1);
+    line-height: 19.2px;
+    padding: 4px 8px;
+    border-radius: 8px;
+    position: absolute;
 }
