--- a/blocks/card.css
+++ b/blocks/card.css
@@ -27,6 +27,7 @@
 
 .card__like-button {
   background-image: url(../images/icons/like-black.svg);
+  background-repeat: no-repeat;
   width: 23px;
   height: 20px;
   border: none;
