--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -70,7 +70,7 @@
   background-image: url(../images/icons/preview-close.svg);
   top: 0;
   right: -52.5px;
-  opacity: 100;
+  opacity: 1;
   background-color: transparent;
 }
 .modal__form {
@@ -99,14 +99,24 @@
   margin: 0;
 }
 
+.modal__input_type_error {
+  border: 1px solid rgba(255, 0, 0, 0.6);
+}
+
 .modal__input:hover {
   cursor: pointer;
   border-color: rgba(33, 33, 33, 1);
 }
 
+.modal__error {
+  display: block;
+  color: rgba(255, 0, 0, 0.7);
+}
+
 .modal__submit-button {
   width: 156px;
   border-radius: 8px;
+  border: none;
   padding: 18px 32px;
   background-color: rgba(33, 33, 33, 1);
   line-height: 16px;
@@ -116,6 +126,16 @@
 
 .modal__submit-button:hover {
   background-color: rgba(33, 33, 33, 0.8);
+}
+
+.modal__submit-button_inactive {
+  cursor: not-allowed;
+  background-color: rgba(33, 33, 33, 0.5);
+}
+
+.modal__submit-button_inactive:hover {
+  cursor: not-allowed;
+  background-color: rgba(33, 33, 33, 0.5);
 }
 
 .modal__image {
@@ -140,7 +160,7 @@
 
 @media screen and (max-width: 625px) {
   .modal {
-    padding: 0 10 0px;
+    padding: 0 10px 0px;
     background-color: rgba(33, 33, 33, 0.8);
   }
 
@@ -196,7 +216,7 @@
 
   .modal__input {
     max-width: 272px;
-    padding: 16 12;
+    padding: 16px 12px;
   }
 
   .modal__caption {
