project 9 first submission

--- a/src/blocks/profile.css
+++ b/src/blocks/profile.css
@@ -94,6 +94,45 @@
   object-fit: cover;
 }
 
+.image__container {
+  display: block;
+  position: relative;
+  /* justify-items: center; */
+  margin: 0;
+  padding: 0;
+}
+
+.image__overlay {
+  display: flex;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0;
+  justify-content: center;
+  width: 100%;
+  height: 190px;
+  border-radius: 8px;
+}
+
+.image__overlay-desktop {
+  display: flex;
+  bottom: 12px;
+  column-gap: 8px;
+  color: rgba(255, 255, 255, 1);
+  line-height: 100%;
+  position: absolute;
+}
+
+.image__overlay-mobile {
+  opacity: 0;
+  display: flex;
+  position: absolute;
+}
+
+.image__overlay:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 627px) {
   .profile {
     flex-direction: column;
@@ -135,5 +174,28 @@
     margin: 0;
     padding-top: 0;
     align-self: center;
+  }
+
+  .image__overlay {
+    display: flex;
+    position: absolute;
+    background-color: rgba(33, 33, 33, 0.6);
+    opacity: 1;
+    justify-content: center;
+    width: 23.34px;
+    height: 23.34px;
+    border-radius: 6px;
+    top: 52px;
+    left: 52px;
+  }
+
+  .image__overlay-desktop {
+    opacity: 0;
+  }
+
+  .image__overlay-mobile {
+    opacity: 1;
+    top: 4px;
+    left: 4px;
   }
 }
