--- a/src/blocks/modal.css
+++ b/src/blocks/modal.css
@@ -158,6 +158,78 @@
   position: absolute;
 }
 
+.modal__container_type_delete {
+  background-color: rgba(255, 255, 255, 1);
+  color: black;
+  padding: 32px 20px;
+  border-radius: 8px;
+  position: absolute;
+  top: 325px;
+  height: 108px;
+  font-family: Poppins, Helvetica, sans-serif;
+  display: flex;
+  row-gap: 32px;
+  flex-direction: column;
+}
+
+.modal__title_delete {
+  padding: 0;
+  font-size: 24px;
+  line-height: 100%;
+  font-weight: 500;
+  text-align: center;
+}
+
+.modal__container_type_delete-button-set {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  column-gap: 20px;
+  justify-content: center;
+}
+
+.modal__delete-button {
+  background-color: rgba(255, 101, 101, 1);
+  height: 52px;
+  font-size: 16px;
+  color: rgba(33, 33, 33, 1);
+}
+
+.modal__delete-button:hover {
+  background-color: rgba(255, 51, 51, 1);
+}
+
+.modal__cancel-button {
+  background-color: rgba(255, 255, 255, 1);
+  border-color: rgba(33, 33, 33, 1);
+  border: 1px solid;
+  height: 52px;
+  font-size: 16px;
+  color: rgba(33, 33, 33, 1);
+}
+
+.modal__cancel-button:hover {
+  color: rgba(255, 255, 255, 1);
+  background-color: rgba(33, 33, 33, 1);
+}
+
+.modal__close-button_type_delete {
+  background-image: url(../images/icons/preview-close.svg);
+  top: 0;
+  right: -52.5px;
+  opacity: 1;
+  background-color: transparent;
+}
+
+.modal__container_type_avatar {
+  width: 730px;
+  height: 298px;
+  padding: 32px 50px;
+  top: 262px;
+  margin: auto;
+  box-sizing: border-box;
+}
+
 @media screen and (max-width: 625px) {
   .modal {
     padding: 0 10px 0px;
